<resources>
    <string name="app_name">Progmob2023</string>
    <string name="progmob_2023">Progmob 2023</string>
    <string name="title_activity_setting_protein_tracker">SettingProteinTracker</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_title_new_message_notifications">Berhasil</string>
    <string name="pref_header_data_sync">Jakarta</string>
</resources>